@@ -23,12 +23,12 @@ noinst_PROGRAMS += run_test_parallel_utils \
 
 run_test_parallel_utils_SOURCES = run_test_parallel_utils.c testing.h
 run_test_parallel_utils_LDFLAGS = @CUNITLDFLAGS@ @THREADS_LDFLAGS@ @MPILDFLAGS@
-run_test_parallel_utils_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@ @THREADS_CFLAGS@ @MPICFLAGS@
+run_test_parallel_utils_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @DEBUG_CFLAGS@ @THREADS_CFLAGS@ @MPICFLAGS@
 run_test_parallel_utils_LDADD   =  \
 								  $(testcode_dir)/testsuite_commqueue/lib_t_commqueue.la \
                                   $(testcode_dir)/testsuite_syncqueue/lib_t_syncqueue.la \
                                   $(testcode_dir)/testsuite_commroutines/lib_t_commroutines.la \
-                                  $(top_srcdir)/src/parallel/lib_mb_p.la \
+                                  $(top_srcdir)/src/parallel/lib_mb_pd.la \
                                   $(top_srcdir)/src/utils/lib_utils.la \
 						  		  @CUNITLIBS@ @THREADS_LIBS@ @MPILIBS@
 						    	  
@@ -36,10 +36,10 @@ run_test_parallel_utils_LDADD   =  \
                
 run_test_parallel_SOURCES = run_test_parallel.c testing.h
 run_test_parallel_LDFLAGS = @CUNITLDFLAGS@ @THREADS_LDFLAGS@ @MPILDFLAGS@
-run_test_parallel_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@ @THREADS_CFLAGS@ @MPICFLAGS@
+run_test_parallel_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @DEBUG_CFLAGS@ @THREADS_CFLAGS@ @MPICFLAGS@
 run_test_parallel_LDADD   = \
 							$(testcode_dir)/testsuite_mb_parallel/lib_t_mb_parallel.la \
-						    $(top_srcdir)/src/parallel/lib_mb_p.la \
+						    $(top_srcdir)/src/parallel/lib_mb_pd.la \
 						    $(top_srcdir)/src/utils/lib_utils.la \
 						    @CUNITLIBS@ @THREADS_LIBS@ @MPILIBS@ 
 						    
@@ -48,7 +48,7 @@ endif
 
 run_test_utils_SOURCES  = run_test_utils.c testing.h
 run_test_utils_LDFLAGS  = @CUNITLDFLAGS@
-run_test_utils_CFLAGS   = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@
+run_test_utils_CFLAGS   = -I$(INCLUDEDIR) @CUNITCFLAGS@ @DEBUG_CFLAGS@
 run_test_utils_LDADD    = $(testcode_dir)/testsuite_objmap/lib_t_objmap.la \
                           $(testcode_dir)/testsuite_pooled_list/lib_t_pooled_list.la \
 						  $(top_srcdir)/src/utils/lib_utils.la \
@@ -57,9 +57,9 @@ run_test_utils_LDADD    = $(testcode_dir)/testsuite_objmap/lib_t_objmap.la \
                
 run_test_serial_SOURCES = run_test_serial.c testing.h
 run_test_serial_LDFLAGS = @CUNITLDFLAGS@
-run_test_serial_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@
+run_test_serial_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @DEBUG_CFLAGS@
 run_test_serial_LDADD   = $(testcode_dir)/testsuite_mb_serial/lib_t_mb_serial.la \
-						  $(top_srcdir)/src/serial/lib_mb_s.la \
+						  $(top_srcdir)/src/serial/lib_mb_sd.la \
 						  $(top_srcdir)/src/utils/lib_utils.la \
 						  @CUNITLIBS@
 						  
