@@ -20,7 +20,7 @@ lib_t_mb_serial_la_SOURCES = setup_suite_mb_serial.c \
 							   header_mb_serial.h
 							 
 lib_t_mb_serial_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLDFLAGS@
-lib_t_mb_serial_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@
+lib_t_mb_serial_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @DEBUG_CFLAGS@
 
 else
 
